[package]
name = "youtube-cookie-refresher"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = [ "derive" ] }
cookie = "0.18.1"
fantoccini = { version = "0.21.4", default_features = false, features = [ "rustls-tls" ] }
nix = { version = "0.29.0", features = [ "net", "socket" ] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = [ "macros", "rt" ] }
